# pySimpleModel

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/simpleModel/: index.doctree
.github/workflows/: gh-pages.yaml  pySimpleModel.yaml
_static/: documentation_options.js
doc/: conf.py
docs/: index.rst
simpleModel/: index.html
simpleModel/ext/: SEIRSconfig.yaml  SEIRSconfigWindows.yaml
