[tool.poetry]
name = "pySimpleModel"
version = "0.7.5"
description = "Simple Model example for the Fair Data Pipeline in Python"
authors = [
    "Ryan J Field <ryan.field@glasgow.ac.uk>",
    "Bruno Viola <bruno.viola@ukaea.uk>"
    ]


homepage = "https://www.fairdatapipeline.org/"

repository = "https://github.com/FAIRDataPipeline/pySimpleModel"

license = "GNU General Public License v3.0"

packages = [
    {include = "simpleModel"}
]

readme = "README.md"

keywords = [
    "FAIR Data Pipeline",
    "FAIR",
    "Data Management",
    "Provenance"
]

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
data-pipeline-api = "0.7.7"

[tool.poetry.dev-dependencies]
poetry = "^1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/FAIRDataPipeline/pySimpleModel/issues"
